--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,14 @@
-﻿* text=auto
+﻿*         text=auto eol=lf
+
+# Code & docs
+*.java    text eol=lf
+*.md      text eol=lf
+*.yml     text eol=lf
+*.yaml    text eol=lf
+*.gitignore text eol=lf
+.gitattributes text eol=lf
+resultat/*.txt text eol=lf
+
+# Données et binaires => pas de conversion
+data/*.txt  -text
+*.pdf       -text
